k8/cow-wisdom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cow-wisdom-service
spec:
  selector:
    app: cow-wisdom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
  type: LoadBalancer
#
