k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cow-wisdom-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Enforce HTTPS
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: wisecow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cow-wisdom-service
                port:
                  number: 80
  tls:
    - hosts:
        - wisecow.local
      secretName: wisecow-tls-secret
